--- a/client/main.html
+++ b/client/main.html
@@ -1,3 +1,8 @@
+//Company: Synergy At Work
+//Author: Richard Ighodaro
+//Date: Sunday 14th May 2018
+//Description: Main Entry Point For Web App
+
 <head>
   <title>Todo List</title>
 </head>
